--- a/packages/flow-chart/src/components/design/lf-menu.scss
+++ b/packages/flow-chart/src/components/design/lf-menu.scss
@@ -1,4 +1,5 @@
 .lf-menu {
+  padding: 2px 0;
   border-radius: 5px;
 
   .lf-menu-item {
@@ -6,5 +7,13 @@
     font-size: 14px;
     line-height: 22px;
     white-space: nowrap;
+  }
+
+  .text-danger {
+    color: var(--el-color-danger);
+  }
+
+  .menu-item-divider {
+    border-top: 1px solid #f1f1f1;
   }
 }
